[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/练功.png" type="Texture" id=1]
[ext_resource path="res://book.png" type="Texture" id=2]
[ext_resource path="res://assets/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://new_script.gd" type="Script" id=4]
[ext_resource path="res://assets/age_panel.png" type="Texture" id=5]
[ext_resource path="res://assets/fame_bg.png" type="Texture" id=6]
[ext_resource path="res://assets/周围逛逛.png" type="Texture" id=7]
[ext_resource path="res://assets/抓紧练功.png" type="Texture" id=8]
[ext_resource path="res://assets/西北戈壁.png" type="Texture" id=9]
[ext_resource path="res://assets/前往别处.png" type="Texture" id=10]
[ext_resource path="res://Start_game.gd" type="Script" id=11]
[ext_resource path="res://assets/Events/bg_1.png" type="Texture" id=12]
[ext_resource path="res://story.gd" type="Script" id=13]
[ext_resource path="res://assets/Start game.png" type="Texture" id=14]
[ext_resource path="res://assets/Events/yexing_1.png" type="Texture" id=15]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float glow_strength : hint_range(0, 2) = 1.0;
uniform vec4 glow_color : hint_color = vec4(1, 1, 0, 1);
uniform int steps = 4; // More steps means a better quality blur at the cost of performance
uniform float spread = 1.0; // Adjusts how wide the glow effect spreads

void fragment() {
    vec4 tex_color = texture(TEXTURE, UV);
    vec4 final_color = tex_color;
    vec2 tex_size = vec2(textureSize(TEXTURE, 0));
    float step_size = spread / float(steps) * TEXTURE_PIXEL_SIZE.x;

    // Only apply glow if the pixel's alpha is lower than a threshold
    if (tex_color.a < 0.9) {
        vec4 glow = vec4(0.0);
        for (int i = -steps; i <= steps; i++) {
            for (int j = -steps; j <= steps; j++) {
                vec2 off = vec2(float(i), float(j)) * step_size;
                vec4 sample = texture(TEXTURE, UV + off);
                glow += sample * (1.0 - sample.a);
            }
        }
        glow /= pow(float(steps * 2 + 1), 2.0);
        final_color = mix(final_color, vec4(glow_color.rgb, glow_color.a * glow_strength), glow.a);
    }

    COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/glow_strength = 1.0
shader_param/glow_color = Color( 1, 1, 0, 1 )
shader_param/steps = 4
shader_param/spread = 1.0

[node name="Node2D" type="Node2D"]

[node name="EventManager" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Background" type="TextureRect" parent="EventManager"]
margin_right = 1006.0
margin_bottom = 603.0
texture = ExtResource( 12 )

[node name="LeftSprite" type="Sprite" parent="EventManager"]
position = Vector2( 173, 128 )
centered = false
region_rect = Rect2( 100, 0, 0, 0 )

[node name="RightSprite" type="Sprite" parent="EventManager"]
position = Vector2( 808, 370 )
z_index = 1

[node name="ColorRect" type="ColorRect" parent="EventManager"]
margin_left = -6.0
margin_top = 410.0
margin_right = 1032.0
margin_bottom = 848.0
rect_pivot_offset = Vector2( 91, 87 )
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="TextLabel" type="RichTextLabel" parent="EventManager"]
material = SubResource( 2 )
margin_left = 2.0
margin_top = 418.0
margin_right = 1026.0
margin_bottom = 580.0
custom_fonts/normal_font = ExtResource( 3 )
text = "啊啊啊啊"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 2.0
margin_right = 1023.0
margin_bottom = 604.0

[node name="BgMap" type="TextureRect" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 196.0
margin_bottom = -8.0
texture = ExtResource( 9 )

[node name="Study" type="Button" parent="CanvasLayer/Panel"]
margin_left = 607.0
margin_top = 5.0
margin_right = 1003.0
margin_bottom = 147.0
icon = ExtResource( 1 )

[node name="PlayerStatus" type="TextureRect" parent="CanvasLayer/Panel"]
anchor_right = 0.385
anchor_bottom = 0.136
margin_right = -205.47
margin_bottom = -37.872
rect_pivot_offset = Vector2( -337, 20 )
texture = ExtResource( 5 )

[node name="Year" type="Label" parent="CanvasLayer/Panel/PlayerStatus"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 71.0
margin_top = 14.0
margin_right = 111.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "16"

[node name="Month" type="Label" parent="CanvasLayer/Panel/PlayerStatus"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 134.0
margin_top = 15.0
margin_right = 174.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="name" type="Label" parent="CanvasLayer/Panel/PlayerStatus"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 14.0
margin_right = 65.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "叶星"

[node name="FameBg" type="TextureRect" parent="CanvasLayer/Panel"]
anchor_top = 0.061
anchor_right = 0.107
anchor_bottom = 0.123
margin_top = 2.278
margin_right = -6.35401
margin_bottom = -0.0460052
texture = ExtResource( 6 )

[node name="Fame" type="Label" parent="CanvasLayer/Panel/FameBg"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 12.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "默默无名"

[node name="Action" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.601
anchor_top = 0.254
anchor_right = 0.955
anchor_bottom = 0.483
margin_left = -0.221985
margin_top = 0.0919952
margin_right = 17.9899
margin_bottom = 0.234009
icon = ExtResource( 7 )

[node name="Action2" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.597
anchor_top = 0.505
anchor_right = 0.973
anchor_bottom = 0.748
margin_left = -0.134033
margin_top = -4.01001
margin_right = -0.406067
margin_bottom = -4.29602
icon = ExtResource( 8 )

[node name="Yexin" type="TextureRect" parent="CanvasLayer/Panel"]
anchor_right = 0.584
anchor_bottom = 0.752
margin_left = 211.0
margin_top = 65.0
margin_right = -114.848
margin_bottom = 155.296
mouse_filter = 2
texture = ExtResource( 15 )
stretch_mode = 1

[node name="Gamelog" type="TextEdit" parent="CanvasLayer/Panel"]
anchor_top = 0.756
anchor_right = 0.589
anchor_bottom = 0.988
margin_top = -0.11203
margin_right = 0.0419312
margin_bottom = 0.223999
custom_fonts/font = ExtResource( 3 )
text = "游戏开始"
readonly = true

[node name="Action3" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.606
anchor_top = 0.748
anchor_right = 1.0
anchor_bottom = 0.982
margin_left = -3.33203
margin_top = 4.70398
margin_right = -17.0
margin_bottom = -2.164
icon = ExtResource( 10 )

[node name="Location" type="Label" parent="CanvasLayer/Panel"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 9.0
margin_top = 90.0
margin_right = 93.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "西北戈壁"

[node name="BooksPanel" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 202.0
margin_top = 13.0
margin_right = 602.0
margin_bottom = 415.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/BooksPanel"]
anchor_right = 0.87
anchor_bottom = 1.039
margin_right = -1.81
margin_bottom = -3.17102

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BooksPanel/GridContainer"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )

[node name="Book1" type="Button" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect"]
anchor_left = 0.022
anchor_top = 0.02
anchor_right = 0.28
anchor_bottom = 0.27
margin_left = 0.199999

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 0.0389996
margin_right = 29.261
margin_bottom = 23.5
custom_fonts/font = ExtResource( 3 )
text = "吐纳法"

[node name="Status" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = -1.961
margin_top = 32.0
margin_right = 27.261
margin_bottom = 55.5
custom_fonts/font = ExtResource( 3 )
text = "可练习"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1"]
anchor_left = 0.058
anchor_top = 0.61
anchor_right = 0.893
anchor_bottom = 0.88
margin_left = 0.026
margin_top = 1.0
margin_right = 0.0209961
margin_bottom = 0.999992

[node name="Diff" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 45.039
margin_top = 83.0
margin_right = 74.261
margin_bottom = 106.5
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="Book2" type="Button" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect"]
anchor_left = 0.022
anchor_top = 0.02
anchor_right = 0.28
anchor_bottom = 0.27
margin_left = 132.2
margin_right = 132.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 0.0389996
margin_right = 29.261
margin_bottom = 23.5
custom_fonts/font = ExtResource( 3 )
text = "邀月手"

[node name="Status" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = -1.961
margin_top = 32.0
margin_right = 27.261
margin_bottom = 55.5
custom_fonts/font = ExtResource( 3 )
text = "可练习"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2"]
anchor_left = 0.058
anchor_top = 0.61
anchor_right = 0.893
anchor_bottom = 0.88
margin_left = 0.026
margin_top = 1.0
margin_right = 0.0209961
margin_bottom = 0.999992

[node name="Diff" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 45.039
margin_top = 83.0
margin_right = 74.261
margin_bottom = 106.5
custom_fonts/font = ExtResource( 3 )
text = "2"

[node name="Book3" type="Button" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect"]
anchor_left = 0.022
anchor_top = 0.02
anchor_right = 0.28
anchor_bottom = 0.27
margin_left = 262.2
margin_right = 262.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 0.0389996
margin_right = 29.261
margin_bottom = 23.5
custom_fonts/font = ExtResource( 3 )
text = "轻身法"

[node name="Status" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = -1.961
margin_top = 32.0
margin_right = 27.261
margin_bottom = 55.5
custom_fonts/font = ExtResource( 3 )
text = "可练习"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3"]
anchor_left = 0.058
anchor_top = 0.61
anchor_right = 0.893
anchor_bottom = 0.88
margin_left = 0.026
margin_top = 1.0
margin_right = 0.0209961
margin_bottom = 0.999992

[node name="Diff" type="Label" parent="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.087
anchor_top = 0.08
anchor_right = 0.813
anchor_bottom = 0.315
margin_left = 45.039
margin_top = 83.0
margin_right = 74.261
margin_bottom = 106.5
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="MapPanel" type="Panel" parent="CanvasLayer"]
anchor_top = 0.676
anchor_right = 0.604
anchor_bottom = 0.99
margin_left = -22.0
margin_top = -5.60004
margin_right = -0.496033
margin_bottom = -6.10352e-05

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MapPanel"]
anchor_left = 0.06
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.4
margin_right = 1.00006
margin_bottom = 4.00003
columns = 3

[node name="StartGame" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="StartGame"]
margin_right = 1020.0
margin_bottom = 600.0
texture = ExtResource( 14 )

[node name="Start" type="Button" parent="StartGame/TextureRect"]
margin_left = 354.0
margin_top = 268.0
margin_right = 593.0
margin_bottom = 322.0
custom_fonts/font = ExtResource( 3 )
text = "开始游戏"

[node name="End" type="Button" parent="StartGame/TextureRect"]
margin_left = 354.0
margin_top = 334.0
margin_right = 593.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 3 )
text = "退出游戏"

[connection signal="pressed" from="CanvasLayer/Panel/Study" to="CanvasLayer" method="_on_Study_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Action" to="CanvasLayer" method="on_Action_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Action2" to="CanvasLayer" method="_on_Action2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Action3" to="CanvasLayer" method="on_Action3_pressed"]
[connection signal="pressed" from="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book1" to="CanvasLayer" method="_on_Book1_pressed"]
[connection signal="pressed" from="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book2" to="CanvasLayer" method="_on_Book2_pressed"]
[connection signal="pressed" from="CanvasLayer/BooksPanel/GridContainer/ColorRect/Book3" to="CanvasLayer" method="_on_Book3_pressed"]
[connection signal="pressed" from="StartGame/TextureRect/Start" to="StartGame" method="_on_Start_pressed"]
[connection signal="pressed" from="StartGame/TextureRect/End" to="StartGame" method="_on_End_pressed"]
